--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/fukui_approval.html"
+  from = "fukui_approval.html"
   to = "https://www2.net-4u.org/fukui_approval"
   status = 301
   force = true
